--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ficha de RPG</title>
-    <link rel="stylesheet" href="Fundo.css">
+    <link rel="stylesheet" href="fundo.css">
 </head>
 <body>
     <div class="ficha">
@@ -76,6 +76,6 @@
         <div class="resultados" id="resultados"></div>
     </div>
 
-    <script src="Script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
